# LionDEExam2026

./: .gitignore  01_考題卷_資料工程師TakeHome.docx  CLAUDE.md  README.md  prd.md  pyproject.toml
candidate_package/: buggy_pipeline.py
candidate_package/dataset/: fx_rates.csv  members.csv  orders_incremental_day1.csv  orders_incremental_day2.csv  orders_incremental_day3.csv  products.csv
candidate_package/module_D/: baseline_etl.py  baseline_etl_v2.py  baseline_etl_v3.py  generate_perf_data.py  handoff.md
candidate_package/module_E/: llm_answers.json  questions.json
candidate_package/module_E/warehouse/: dim_date.csv  dim_member.csv  dim_product.csv  fact_order.csv
candidate_package/module_F/: churn_training_pipeline.py
docs/: report_B.md
