[project]
name = "liondeexam2026"
version = "0.1.0"
description = "Add your description here"
requires-python = "==3.13.11"
dependencies = [
    "duckdb==1.5.5",
    "numpy==2.5.1",
    "pandas==3.0.3",
    "pyspark==4.2.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["candidate_package"]

[tool.setuptools.package-dir]
"" = "candidate_package"

[tool.pytest.ini_options]
pythonpath = ["candidate_package"]

[dependency-groups]
dev = [
    "pytest==9.1.1",
]
